--- a/fish-auth/fish-auth-rpc/pom.xml
+++ b/fish-auth/fish-auth-rpc/pom.xml
@@ -15,4 +15,12 @@
         <version>1.0.0</version>
     </parent>
 
+    <dependencies>
+        <dependency>
+            <groupId>cn.devifish</groupId>
+            <artifactId>fish-common</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+    </dependencies>
+
 </project>
