--- a/fish-admin/fish-admin-rpc/pom.xml
+++ b/fish-admin/fish-admin-rpc/pom.xml
@@ -10,7 +10,7 @@
     <description>项目系统后台远程调用层</description>
 
     <parent>
-        <groupId>cn.devifish</groupId>
+        <groupId>cn.devifish.cloud</groupId>
         <artifactId>fish-admin</artifactId>
         <version>1.0.0</version>
     </parent>
