--- a/fish-auth/pom.xml
+++ b/fish-auth/pom.xml
@@ -11,7 +11,7 @@
     <description>用户权限认证服务聚合包</description>
 
     <parent>
-        <groupId>cn.devifish</groupId>
+        <groupId>cn.devifish.cloud</groupId>
         <artifactId>fish-cloud</artifactId>
         <version>1.0.0</version>
     </parent>
