--- a/fish-common/pom.xml
+++ b/fish-common/pom.xml
@@ -8,7 +8,7 @@
     <description>项目公共组件</description>
 
     <parent>
-		<groupId>cn.devifish</groupId>
+		<groupId>cn.devifish.cloud</groupId>
 		<artifactId>fish-cloud</artifactId>
         <version>1.0.0</version>
     </parent>
