--- a/fish-admin/fish-admin-rpc/pom.xml
+++ b/fish-admin/fish-admin-rpc/pom.xml
@@ -15,4 +15,12 @@
         <version>1.0.0</version>
     </parent>
 
+    <dependencies>
+        <dependency>
+            <groupId>cn.devifish.cloud</groupId>
+            <artifactId>fish-admin-common</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+    </dependencies>
+
 </project>
