fix: 修复 OAuth2 无法登录

--- a/fish-config/src/main/resources/config/gateway-server.yml
+++ b/fish-config/src/main/resources/config/gateway-server.yml
@@ -33,7 +33,7 @@ spring:
 
         # Admin服务
         - id: admin-route
-          uri: lb://admin-api-server
+          uri: lb://admin-server
           predicates:
             - Path=/admin/**
           filters:
