--- a/fish-admin/fish-admin-server/Dockerfile
+++ b/fish-admin/fish-admin-server/Dockerfile
@@ -12,4 +12,4 @@ RUN echo 'Asia/Shanghai' >/etc/timezone
 
 ENV JAVA_OPTS="-Xms128m -Xmx256m -Xss256k -XX:+UseConcMarkSweepGC -Djava.security.egd=file:/dev/./urandom"
 ENV SPRING_OPTS="-Dspring.profiles.active=prod"
-ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS $SPRING_OPTS -jar fish-admin-server.jar"]
+ENTRYPOINT ["sh", "-c", "sleep 60 &&  java $JAVA_OPTS $SPRING_OPTS -jar fish-admin-server.jar"]
